# Minecraft

./: .gitignore  CLAUDE.md  CMakeLists.txt  prd.md
assets/shaders/: block.frag  block.vert  line.frag  sky.frag  sky.vert
src/: main.cpp
src/core/: InputManager.cpp  InputManager.h  Window.cpp  Window.h
src/entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/gui/: HudRenderer.cpp  HudRenderer.h  TextRenderer.cpp  TextRenderer.h
src/player/: Inventory.cpp  Inventory.h  PlayerController.cpp  PlayerController.h
src/render/: Camera.cpp  Camera.h  ChunkMesher.cpp  ChunkMesher.h  ChunkRenderer.cpp  ChunkRenderer.h  Frustum.cpp  Frustum.h  Shader.cpp  Shader.h  TextureAtlas.cpp  TextureAtlas.h
src/util/: Noise.cpp  Noise.h
src/world/: BiomeGenerator.cpp  BiomeGenerator.h  Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  OreGenerator.cpp  OreGenerator.h  StructureGenerator.cpp  StructureGenerator.h  TerrainGenerator.cpp  TerrainGenerator.h  WorldGenerator.cpp  WorldGenerator.h
